--- a/src/app/pages/dashboard-project/overview/overview.component.html
+++ b/src/app/pages/dashboard-project/overview/overview.component.html
@@ -118,7 +118,7 @@
             <option value="4">Día 4</option>
             <option value="5">Día 5</option>
             <option value="6">Día 6</option>
-            <option value="" selected="selected">Todos</option>
+            <option value="" selected="selected">Dias</option>
           </select>
         </div>
         <!--end::Card toolbar-->
