--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -82,6 +82,19 @@
         <div class="fs-2hx fw-bold">{{num_proyectos * 6}}</div>
         <div class="fs-4 fw-semibold text-gray-400 mb-7">Días de Proyectos</div>
         <div class="fs-6 d-flex justify-content-between mb-4">
+          <div class="fw-semibold">Días en curso</div>
+          <div class="d-flex fw-bold">
+          <!--begin::Svg Icon | path: icons/duotune/arrows/arr007.svg-->
+          <span class="svg-icon svg-icon-3 me-1 svg-icon-primary">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.4 10L5.3 18.1C4.9 18.5 4.9 19.1 5.3 19.5C5.7 19.9 6.29999 19.9 6.69999 19.5L14.8 11.4L13.4 10Z" fill="currentColor" />
+              <path opacity="0.3" d="M19.8 16.3L8.5 5H18.8C19.4 5 19.8 5.4 19.8 6V16.3Z" fill="currentColor" />
+            </svg>
+          </span>
+          <!--end::Svg Icon-->{{curso}}</div>
+        </div>
+        <div class="separator separator-dashed"></div>
+        <div class="fs-6 d-flex justify-content-between mb-4">
           <div class="fw-semibold">Días completados</div>
           <div class="d-flex fw-bold">
           <!--begin::Svg Icon | path: icons/duotune/arrows/arr007.svg-->
