--- a/src/app/pages/principal/principal.component.html
+++ b/src/app/pages/principal/principal.component.html
@@ -21,7 +21,7 @@
               </div>
               <div class="content">
                   <h3>Entender</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, nostrum!</p>
+                  <p>Comprender e interiorizar la idea a trabajar</p>
               </div>
               <div class="entrar">
                 <a (click)="entrar('entender',(fase >= 1))">Entrar</a>
@@ -44,7 +44,7 @@
               </div>
               <div class="content">
                   <h3>Enfoque solución</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, nostrum!</p>
+                  <p>Sintetizar y enfocar la solución al problema</p>
 
               </div>
               
@@ -68,7 +68,7 @@
               </div>
               <div class="content">
                   <h3>Modelo de negocios</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, nostrum!</p>
+                  <p>Cómo la empresa crea, entrega y captura valor, incluyendo la manera en que gana dinero y opera en el mercado</p>
               </div>
 
               <div class="entrar">
@@ -92,7 +92,7 @@
             </div>
             <div class="content">
                 <h3>Bosquejar</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, nostrum!</p>
+                <p>Colocar en el papel la solución y propuesta encontrada</p>
 
             </div>
             <div class="entrar">
@@ -115,7 +115,7 @@
           </div>
           <div class="content">
               <h3>Decidir</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, nostrum!</p>
+              <p>Seleccionar las mejores alternativas y tomar decisiones clave para avanzar, considerando objetivos, recursos y posibles riesgos</p>
 
           </div>
           <div class="entrar">
