refrescar al salir de mbipi lab

--- a/src/app/pages/principal/principal.component.html
+++ b/src/app/pages/principal/principal.component.html
@@ -971,7 +971,7 @@
         float: left;">Volver</a>
       </div>
       <div class="container" style="align-items: flex-end;">
-        <a routerLink="/dashboard-project/{{proyecto_id}}" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
+        <a href="/dashboard-project/{{proyecto_id}}" class="btn btn-danger" style="margin: -15px 10px 0px 10px;
         float: right;">Salir de MbipiLab</a>
       </div>
     </div>
