--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -36,7 +36,7 @@
             <a routerLink="/proyect-init/{{proyecto_id}}" class="btn btn-sm btn-primary me-3" *ngIf="rol == 'Decisor' && proyecto.estado == 'Iniciado'">Continuar Proyecto</a><!--{{proyecto.etapa_activa}}-->
             <a routerLink="/proyect-init/{{proyecto_id}}" class="btn btn-sm btn-primary me-3" *ngIf="rol == 'Participante' && proyecto.estado == 'Iniciado'">Ingresar al Proyecto</a>
             <!--begin::Menu-->
-            <div class="me-0">
+            <div class="me-0" *ngIf="rol == 'Decisor'">
               <button class="btn btn-sm btn-icon btn-bg-light btn-active-color-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
                 <i class="bi bi-three-dots fs-3"></i>
               </button>
@@ -85,7 +85,7 @@
                   </div>
                 </div>-->
                 <div class="menu-item px-3 my-1">
-                  <a href="#" class="menu-link px-3">Configuración</a>
+                  <a (click)="setActive('settings')" class="menu-link px-3"  routerLink="settings">Configuración</a>
                 </div>
               </div>
               <!--end::Menu 3-->
@@ -166,8 +166,8 @@
           <!--begin::Users-->
           <div class="symbol-group symbol-hover mb-3">
             <ng-container *ngFor="let usu of miembros; let u = index;">
-              <div *ngIf="avatar_img; else elseBlock" class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
-                <img src="{{avatar_img}}" alt="a_img">
+              <div *ngIf="usu.eq_usu_plat != null; else elseBlock" class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
+                <img src="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.img : avatar_img}}" alt="a_img">
               </div>
               <ng-template #elseBlock>
                 <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
