ajuste de imagenes por defecto usuarios

--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -2,7 +2,7 @@
   <div class="menu-item px-3">
     <div class="menu-content d-flex align-items-center px-3">
       <div class="symbol symbol-50px me-5">
-        <!--<img alt="Foto" src="./assets/media/avatars/300-1.jpg" />-->
+        <!--<img alt="Foto" src="./assets/media/svg/avatars/blank-dark.svg" />-->
         <img alt="Foto" [src]="_user.img" (error)="imgError($event)"/>
       </div>
 
