--- a/src/app/modules/account/account.component.html
+++ b/src/app/modules/account/account.component.html
@@ -8,7 +8,7 @@
             position-relative
           "
         >
-          <img src="./assets/media/avatars/300-1.jpg" alt="Metronic" />
+          <img src="./assets/media/svg/avatars/blank-dark.svg" alt="Metronic" />
           <div
             class="
               position-absolute
