--- a/src/app/modules/account/settings/forms/profile-details/profile-details.component.html
+++ b/src/app/modules/account/settings/forms/profile-details/profile-details.component.html
@@ -25,7 +25,7 @@
               <div
                 class="image-input-wrapper w-125px h-125px"
                 [style.background-image]="
-                  'url(./assets/media/avatars/300-1.jpg'
+                  'url(./assets/media/svg/avatars/blank-dark.svg'
                 "
               ></div>
             </div>
