--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -136,7 +136,7 @@
         <div class="symbol-group symbol-hover mb-9">
         <ng-container *ngFor="let usu of correoMiembrosEquipoList; let u = index;">
           <div *ngIf="usu.eq_usu_plat != null; else elseBlock" class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
-            <img src="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.img : avatar_img}}" alt="a_img">
+            <img src="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.img : avatar_img}}" alt="a_img" (error)="imgErrorUser($event)">
           </div>
           <ng-template #elseBlock>
             <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
@@ -299,7 +299,7 @@
 
           <ng-container *ngFor="let usu of proyecto.equipos_equipo.equipo_usuarios; let u = index;">
             <div *ngIf="usu.eq_usu_plat != null; else elseBlock" class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
-              <img src="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.img : avatar_img}}" alt="a_img">
+              <img src="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.img : avatar_img}}" alt="a_img" (error)="imgErrorUser($event)">
             </div>
             <ng-template #elseBlock>
               <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="{{usu.eq_usu_plat != null ? usu.eq_usu_plat.nombre : (usu.correo ? usu.correo : usuario.correo_login)}}">
@@ -358,7 +358,7 @@
 											<!--begin::Modal body-->
 											<div class="modal-body scroll-y mx-5 mx-xl-18 pt-0 pb-15">
 												<!--begin::Heading-->
-												<div class="text-center mb-13">
+												<div class="text-c|enter mb-13">
 													<!--begin::Title-->
 													<h1 class="mb-3">Miembros de los equipos</h1>
 													<!--end::Title-->
