--- a/src/app/pages/dashboard-project/overview/overview.component.html
+++ b/src/app/pages/dashboard-project/overview/overview.component.html
@@ -1,5 +1,5 @@
 <!-- Seccion Loader-->  
-<app-loadmask [loader]="isLoading" *ngIf="isLoading"></app-loadmask>
+<!--<app-loadmask [loader]="isLoading" *ngIf="isLoading"></app-loadmask>-->
 <!-- Fin Seccion Loader--> 
 
 <!--begin::Row-->
