ajuste en estilos descargables

--- a/src/app/pages/dashboard-project/descargables/scope_canvas/scope_print.component.scss
+++ b/src/app/pages/dashboard-project/descargables/scope_canvas/scope_print.component.scss
@@ -71,7 +71,7 @@
 }
 
 .categoria-necesidades{  
-  width: 450px;
+  width: 31%;//450px;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -85,7 +85,7 @@
 }
 
 .categoria-necesidades:hover{  
-  width: 450px;
+  width: 31%;//450px;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -99,7 +99,7 @@
 }
 
 .left-necesidades{  
-  width: 160px;
+  width: 45%;//160px;
   height: 500px;
   margin: 30px 10px;
   float: left;
@@ -110,7 +110,7 @@
 }
 
 .right-necesidades{  
-  width: 160px;
+  width: 45%;//160px;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -121,7 +121,7 @@
 }
 
 .categoria-propositos{  
-  width: 450px;
+  width: 31%;//450px;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -135,7 +135,7 @@
 }
 
 .categoria-propositos:hover{  
-  width: 450px;
+  width: 31%;//450px;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -149,7 +149,7 @@
 }
 
 .categoria-objetivos{  
-  width: 450px;
+  width: 31%;//450px;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -163,7 +163,7 @@
 }
 
 .categoria-objetivos:hover{  
-  width: 450px;
+  width: 31%;//450px;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -178,7 +178,7 @@
 
 
 .left-objetivos{  
-  width: 160px;
+  width: 45%;//160px;
   height: 500px;
   margin: 30px 10px;
   float: left;
@@ -189,7 +189,7 @@
 }
 
 .right-objetivos{  
-  width: 160px;
+  width: 45%;//160px;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -200,7 +200,7 @@
 }
 
 .categoria-acciones{  
-  width: 685px;
+  width: 47%;//685px;
   height: 300px;
   margin: 10px 10px;
   float: left;
@@ -214,7 +214,7 @@
 }
 
 .categoria-acciones:hover{  
-  width: 685px;
+  width: 47%;//685px;
   height: 300px;
   margin: 10px 10px;
   float: left;
@@ -228,7 +228,7 @@
 }
 
 .categoria-metricas{  
-  width: 685px;
+  width: 47%;//685px;
   height: 300px;
   margin: 10px 10px;
   float: left;
@@ -242,7 +242,7 @@
 }
 
 .categoria-metricas:hover{  
-  width: 685px;
+  width: 47%;//685px;
   height: 300px;
   margin: 10px 10px;
   float: left;
