--- a/src/app/pages/dashboard-project/descargables/lean_canvas/lean_print.component.scss
+++ b/src/app/pages/dashboard-project/descargables/lean_canvas/lean_print.component.scss
@@ -71,7 +71,7 @@
 }
 
 .categoria-problema{  
-  width: 300px;
+  width: 18%;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -85,7 +85,7 @@
 }
 
 .categoria-problema:hover{  
-  width: 300px;
+  width: 18%;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -99,7 +99,7 @@
 }
 
 .solucion-metricas{  
-  width: 300px;
+  width: 18%;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -109,7 +109,7 @@
 }
 
 .categoria-solucion{  
-  width: 300px;
+  width: 100%;
   height: 240px;
   //margin: 10px 10px;
   float: left;
@@ -123,7 +123,7 @@
 }
 
 .categoria-solucion:hover{  
-  width: 300px;
+  width: 100%;
   height: 240px;
   //margin: 10px 10px;
   float: left;
@@ -137,7 +137,7 @@
 }
 
 .categoria-metricas{  
-  width: 300px;
+  width: 100%;
   height: 240px;
   margin: 20px 0px;
   float: left;
@@ -151,7 +151,7 @@
 }
 
 .categoria-metricas:hover{  
-  width: 300px;
+  width: 100%;
   height: 240px;
   margin: 20px 0px;
   float: left;
@@ -165,7 +165,7 @@
 }
 
 .categoria-propuesta{  
-  width: 300px;
+  width: 18%;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -179,7 +179,7 @@
 }
 
 .categoria-propuesta:hover{  
-  width: 300px;
+  width: 18%;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -193,7 +193,7 @@
 }
 
 .ventajas-canales{  
-  width: 300px;
+  width: 18%;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -204,7 +204,7 @@
 }
 
 .categoria-ventajas{  
-  width: 300px;
+  width: 100%;
   height: 240px;
   //margin: 10px 10px;
   float: left;
@@ -218,7 +218,7 @@
 }
 
 .categoria-ventajas:hover{  
-  width: 300px;
+  width: 100%;
   height: 240px;
   //margin: 10px 10px;
   float: left;
@@ -232,7 +232,7 @@
 }
 
 .categoria-canales{  
-  width: 300px;
+  width: 100%;
   height: 240px;
   margin: 20px 0px;
   float: left;
@@ -246,7 +246,7 @@
 }
 
 .categoria-canales:hover{  
-  width: 300px;
+  width: 100%;
   height: 240px;
   margin: 20px 0px;
   float: left;
@@ -260,7 +260,7 @@
 }
 
 .categoria-clientes{  
-  width: 300px;
+  width: 18%;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -274,7 +274,7 @@
 }
 
 .categoria-clientes:hover{  
-  width: 300px;
+  width: 18%;
   height: 500px;
   margin: 10px 10px;
   float: left;
@@ -288,7 +288,7 @@
 }
 
 .categoria-estructuras{  
-  width: 780px;
+  width: 47%;
   height: 300px;
   margin: 10px 10px;
   float: left;
@@ -302,7 +302,7 @@
 }
 
 .categoria-estructuras:hover{  
-  width: 780px;
+  width: 47%;
   height: 300px;
   margin: 10px 10px;
   float: left;
@@ -316,7 +316,7 @@
 }
 
 .categoria-flujos{  
-  width: 780px;
+  width: 47%;
   height: 300px;
   margin: 10px 10px;
   float: left;
@@ -330,7 +330,7 @@
 }
 
 .categoria-flujos:hover{  
-  width: 780px;
+  width: 47%;
   height: 300px;
   margin: 10px 10px;
   float: left;
